Added roboto font loading

--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -1,5 +1,7 @@
 @import "./material-design-icons/material-icons.css";
+@import "./roboto/roboto.css";
 
 body {
 	margin: 0;
+	font-family: 'Roboto', 'Helvetica', 'Arial', 'sans-serif';
 }
