--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -5,3 +5,8 @@ body {
 	margin: 0;
 	font-family: 'Roboto', 'Helvetica', 'Arial', 'sans-serif';
 }
+
+a {
+	color: inherit;
+	text-decoration: inherit;
+}
