--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -1,12 +1,39 @@
 @import "./material-design-icons/material-icons.css";
 @import "./roboto/roboto.css";
 
-body {
-	margin: 0;
-	font-family: 'Roboto', 'Helvetica', 'Arial', 'sans-serif';
-}
-
 a {
 	color: inherit;
 	text-decoration: inherit;
+}
+
+html {
+	height: 100%;
+}
+
+body {
+	margin: 0;
+	min-height: 100%;
+	font-family: "Roboto", "Helvetica", "Arial", "sans-serif";
+	display: flex;
+	flex-direction: column;
+}
+
+#root {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+}
+
+.app {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+}
+
+main {
+	flex: 1;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	background-color: #e9e9e9;
 }
