--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -3,6 +3,7 @@
 	padding: 20px;
 	font-weight: 300;
 	box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
+	z-index: 2;
 }
 
 .nav-title {
