--- a/src/styles/devices.css
+++ b/src/styles/devices.css
@@ -3,3 +3,130 @@
 	bottom: 20px;
 	right: 20px;
 }
+
+.content-devices .devices-list-title {
+	color: #111;
+	font-size: 1.8rem;
+	margin-bottom: 8px;
+}
+
+.content-devices .device-tile {
+	background-color: #fff;
+	position: relative;
+	max-width: 460px;
+	margin: 0 10px 10px 0;
+	border-radius: 2px;
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+	padding: 10px;
+	box-sizing: border-box;
+}
+
+.content-devices .other-device-tile {
+	cursor: pointer;
+	transition: background-color 0.3s ease-in-out;
+}
+
+.content-devices .other-device-tile:hover {
+	background-color: #f5f5f5;
+}
+
+.content-devices .current-device-tile {
+	padding: 10px 0 0 0;
+	border-left: 3px solid #23655d;
+}
+
+.content-devices .current-device-tile .device-row {
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.content-devices .device-tile.cancel-device {
+	cursor: auto;
+	color: #8e8e8e;
+}
+
+.content-devices .device-tile.cancel-device:hover {
+	background-color: #fff;
+}
+
+.content-devices .device-row {
+	margin-bottom: 3px;
+}
+
+.content-devices .device-name {
+	font-size: 1.2rem;
+}
+
+.content-devices .device-header {
+	font-weight: 500;
+}
+
+.content-devices .content-devices-list-current {
+	margin-bottom: 25px;
+}
+
+.content-devices .no-device {
+	color: #c73829;
+}
+
+.content-devices .device-row.device-actions {
+	display: flex;
+	border-top: 1px solid #e7e7e7;
+	margin-top: 8px;
+	padding: 0;
+}
+
+.content-devices .device-action {
+	background-color: #fff;
+	transition: background-color 0.3s ease-in-out;
+	border-radius: 2px;
+	padding-top: 8px;
+	padding-bottom: 6px;
+	text-align: center;
+	width: 50%;
+	text-transform: uppercase;
+	cursor: pointer;
+	font-weight: 500;
+	font-size: 16px;
+}
+
+.content-devices .device-action:first-child {
+	border-right: 1px solid #e7e7e7;
+}
+
+.content-devices .device-action:hover {
+	background-color: #e7e7e7;
+}
+
+.content-devices .device-action i {
+	height: 24px;
+	vertical-align: middle;
+}
+
+.content-devices .device-action .icon-title {
+	display: inline-block;
+	line-height: 24px;
+	vertical-align: middle;
+}
+
+.content-devices .close-icon {
+	background-color: #fff;
+	transition: background-color 0.3s ease-in-out;
+	position: absolute;
+	top: 4px;
+	right: 4px;
+	cursor: pointer;
+	line-height: 28px;
+	width: 28px;
+	text-align: center;
+	height: 28px;
+	border-radius: 50%;
+}
+
+.content-devices .close-icon:hover {
+	background-color: #e7e7e7;
+}
+
+.content-devices .close-icon i {
+	line-height: 28px;
+}
