--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -37,3 +37,12 @@ main {
 	flex-direction: column;
 	background-color: #e9e9e9;
 }
+
+.card {
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+	background-color: #fff;
+	max-width: 460px;
+	border-radius: 2px;
+	box-sizing: border-box;
+	position: relative;
+}
