--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -46,3 +46,31 @@ main {
 	box-sizing: border-box;
 	position: relative;
 }
+
+.pre-card-section-title {
+	color: #111;
+	font-size: 1.8rem;
+	margin-bottom: 8px;
+}
+
+.icon-card-hover {
+	background-color: #fff;
+	transition: background-color 0.3s ease-in-out;
+	position: absolute;
+	top: 4px;
+	right: 4px;
+	cursor: pointer;
+	line-height: 28px;
+	width: 28px;
+	text-align: center;
+	height: 28px;
+	border-radius: 50%;
+}
+
+.icon-card-hover:hover {
+	background-color: #e7e7e7;
+}
+
+.icon-card-hover i {
+	line-height: 28px;
+}
