--- a/src/styles/data.css
+++ b/src/styles/data.css
@@ -15,3 +15,9 @@
 	flex-grow: 1;
 	flex-basis: 500px;
 }
+
+.content-data .floating-action-button {
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+}
