--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -38,6 +38,10 @@ main {
 	background-color: #e9e9e9;
 }
 
+.hidden {
+	display: none;
+}
+
 .card {
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 	background-color: #fff;
