--- a/src/styles/portal.css
+++ b/src/styles/portal.css
@@ -23,7 +23,7 @@
 .portal-title {
 	font-weight: 500;
 	font-size: 1.2rem;
-	margin-bottom: 10px;
+	margin: 0 10px 10px 10px;
 }
 
 .portal .delete-id {
@@ -62,4 +62,38 @@
 
 .portal .add-content {
 	margin: 15px 0 25px 0;
+}
+
+.portal .time-controls {
+	display: inline-block;
+	border-radius: 2px;
+	border: 3px solid #e7e7e7;
+	margin-bottom: 15px;
+}
+
+.portal .time-control {
+	background-color: #fff;
+	color: #979797;
+	transition: all 0.3s ease;
+	display: inline-block;
+	cursor: pointer;
+	padding: 8px 10px;
+	min-width: 78px;
+	font-size: 1.1rem;
+	letter-spacing: 0.1em;
+	font-weight: 500;
+	user-select: none;
+}
+
+.portal .time-control:hover {
+	background-color: #e7e7e7;
+	color: #666;
+}
+
+.portal .time-control:first-child {
+	border-right: 3px solid #e7e7e7;
+}
+
+.portal .delete-id.clock-tick {
+	margin-bottom: 8px;
 }
