--- a/src/styles/data.css
+++ b/src/styles/data.css
@@ -27,3 +27,11 @@
 	align-self: flex-end;
 	padding: 10px;
 }
+
+.content-data .no-scans-add {
+	cursor: pointer;
+	font-size: 1.6rem;
+	vertical-align: middle;
+	margin-left: 4px;
+	color: #16564f;
+}
